syntax = "proto3";

package BusinessDataModel;

import "google/protobuf/empty.proto";
import "master.proto";
import "referenceMaster.proto";
import "referenceAttribute.proto";
import "attribute.proto";
import "validations.proto";
import "attributeGroup.proto";
import "physicalDataModel.proto";

service MasterService  {
    rpc CreateMaster(Master) returns (MasterResponse);
    rpc GetMaster(MasterId) returns (MasterResponse);
    rpc GetAllMasters(google.protobuf.Empty) returns (Masters);
    rpc UpdateMaster(UpdateMaster) returns (MasterResponse);
    rpc DeleteMaster(MasterId) returns (google.protobuf.Empty);
}

service ReferenceMasterService {
    rpc CreateReferenceMaster(ReferenceMaster) returns(ReferenceMasterResponse);
    rpc GetReferenceMaster(MasterId) returns(ReferenceMasterResponse);
    rpc GetAllReferenceMasters(google.protobuf.Empty) returns(ReferenceMasters);
    rpc UpdateReferenceMaster(UpdateReferenceMaster) returns(ReferenceMasterResponse);
    rpc DeleteReferenceMaster(MasterId) returns(google.protobuf.Empty);
}

service ReferenceAttributeService {
    rpc CreateReferenceAttribute(ReferenceAttribute) returns (ReferenceAttributeResponse);
    rpc GetReferenceAttribute(MasterId) returns (ReferenceAttributeResponse);
    rpc GetAllReferenceAttribute(google.protobuf.Empty) returns (ReferenceAttributes);
    rpc GetReferenceAttributeForMaster(MasterId) returns (ReferenceAttributes);
    rpc UpdateReferenceAttribute(UpdateReferenceAttribute) returns (ReferenceAttributeResponse);
    rpc DeleteReferenceAttribute(MasterId) returns (google.protobuf.Empty);
}

service AttributeService {
    rpc CreateAttribute (Attribute) returns  (AttributeResponse);
    rpc CreateAttributeByCategory(AttributeByCategory) returns (AttributeResponse);
    rpc GetAttribute (MasterId) returns  (AttributeResponse);
    rpc FetchReferenceAttribute(MasterId) returns (Attributes);
    rpc GetAllAttribute (google.protobuf.Empty) returns  (Attributes);
    rpc UpdateAttribute (UpdateAttribute) returns  (AttributeResponse);
    rpc DeleteAttribute (MasterId) returns  (google.protobuf.Empty);
    rpc FindValidation (MasterId) returns  (ValidatonResponse);
    rpc UpdateValidation (UpdateValidation) returns  (ValidatonResponse);
    rpc MapAttributesToCategory (MapAttribute) returns  (Attributes);
    rpc GetAttributesByCategory (MasterId) returns  (Attributes);
}

service AttributeGroupService {
    rpc CreateAttributeGroup(AttributeGroup) returns (AttributeGroupRes);
    rpc GetAttributeGroup(MasterId) returns (AttributeGroupRes);
    rpc CreateAttributeGroupByCategory(AttributeGroupCat) returns (AttributeGroupRes);
    rpc GetAttributeGroupByCategory(MasterId) returns (AttributeGroupRes);
    rpc GetAllAttributeGroup(google.protobuf.Empty) returns (Attributes);
    rpc AssignAttributesToAttributeGroup(MapAttribute) returns (AttributeGroupResponse);
    rpc RemoveAttributesToAttributeGroup(MapAttribute) returns (AttributeGroupResponse);
    rpc UpdateAttributeGroup(UpdateAttributeGroups) returns (AttributeGroupResponse);
    rpc DeleteAttributeGroup(MasterId) returns (google.protobuf.Empty);
    rpc MapAttributeGroupToCategory(MapAttribute) returns (AttributeGroupResponse);
    rpc GetAttributeGroupsByCategory(MasterId) returns (AttributeGroupResponse);
}

service PhysicalDataModelService {
    rpc CreatePhysicalDataModel(MasterId) returns (google.protobuf.Empty);
    rpc GetPhysicalDataModel(MasterId) returns (PhysicalDataModel);
}